@@ -1,3 +1,5 @@
+import org.gradle.kotlin.dsl.annotationProcessor
+
 plugins {
     java
     id("org.springframework.boot") version "3.4.5"
@@ -16,11 +18,37 @@ java {
     targetCompatibility = JavaVersion.VERSION_24
 }
 
+tasks.withType(JavaCompile::class.java).configureEach {
+    options.encoding = "UTF-8"
+    options.compilerArgs.addAll(
+        listOf(
+            "--enable-preview",
+            "-parameters"
+        )
+    )
+}
+
+
 repositories {
     mavenCentral()
 }
 
+val mockitoAgent: org.gradle.api.artifacts.Configuration by configurations.creating
+
+configurations {
+
+    compileOnly {
+        extendsFrom(mockitoAgent)
+    }
+
+    testImplementation {
+        extendsFrom(mockitoAgent)
+    }
+}
+
 dependencies {
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
+
     // Spring Boot starters
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
@@ -33,11 +61,12 @@ dependencies {
     implementation(project(":obserra-shared"))
 
     // Kubernetes client
-    implementation("io.kubernetes:client-java:18.0.1")
+    implementation("io.kubernetes:client-java:23.0.0")
 
     // JSON processing
     implementation("com.fasterxml.jackson.core:jackson-databind")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml")
 
     // Development tools
     developmentOnly("org.springframework.boot:spring-boot-devtools")
@@ -45,10 +74,24 @@ dependencies {
     // Test dependencies
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.junit.jupiter:junit-jupiter")
-    testImplementation("org.mockito:mockito-core")
     testImplementation("org.mockito:mockito-junit-jupiter")
+
+    mockitoAgent("org.mockito:mockito-core:5.17.0") {
+        isTransitive = false
+    }
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
+
+    jvmArgumentProviders.add(CommandLineArgumentProvider {
+        listOf(
+            "--enable-preview",
+            "-javaagent:${mockitoAgent.singleFile}",
+            "-Djunit.jupiter.extensions.autodetection.enabled=true",
+            "-Xshare:off",
+
+            )
+    })
 }
+
